49) kernel: ethtool: make .get_dump_data() harder to misuse by drivers.<br>
50) kernel: netfilter: ctnetlink: fix leak in error path of ctnetlink_create_expect.<br>
51) kernel: netfilter: ctnetlink: don't permit ct creation with random tuple.<br>
52) kernel: netlink: validate addr_len on bind.<br>
53) kernel: netlink: change presentation of portid in procfs to unsigned.<br>
54) kernel: rtnetlink: fix error return code in rtnl_link_fill().<br>
55) kernel: bridge: use dev->addr_assign_type to see if user change mac.<br>
56) kernel: inetpeer: fix token initialization.<br>
57) kernel: ipv4: use standard iovec primitive in raw_probe_proto_opt.<br>
58) kernel: mips: fix start of free memory when using initrd.<br>
59) kernel: pppoe: lacks DST MAC address check.<br>
60) kernel: ppp: unset skb checksum complete in ppp_receive_frame.<br>
61) kernel: ppp: mppe: sanity error path rework.<br>
62) kernel: ppp: mppe: discard late packet in stateless mode.<br>
63) kernel: ip_forward: Drop frames with attached skb->sk.<br>
64) kernel: tcp: fix possible deadlock in tcp_send_fin().<br>
65) kernel: dql: dql_queued() should write first to reduce bus transactions.<br>
<br>
<br>
<b>3.0.x</b><br>
1) uboot: update to 4.3.2.0 version.<br>
2) igmpproxy: fix switch managment.<br>
3) switchtools: add vlan clear command.<br>
4) init.d: full cleanup vlan parts in restore dumb mode function.<br>
5) kernel: add MX25L51245G, MT25QL512AB, N25Q256A spi flashs support.<br>
6) kernel: nvram: fix check part size in commit.<br>
<br>
<br>
<b>TODO:</b><br>
1) add Default ipv6 gateway in VPN UI (vpnDGWSIX variable).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
5) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>