@@ -879,6 +879,7 @@
 4) init.d: full cleanup vlan parts in restore dumb mode function.<br>
 5) kernel: add MX25L51245G, MT25QL512AB, N25Q256A spi flashs support.<br>
 6) kernel: nvram: fix check part size in commit.<br>
+7) kernel: hw_nat: add FoE 80b entries workaround on IPv6 offload enabled.<br>
 <br>
 <br>
 <b>TODO:</b><br>
